textarea overlap fix

--- a/app/bezirk/bezirk.style.css
+++ b/app/bezirk/bezirk.style.css
@@ -88,7 +88,6 @@ div.post div.xv_left ul li a:hover
 }
 div.post textarea
 {
-	width:735px;
 	height:165px;
 }
 
