--- a/css/style_working.css
+++ b/css/style_working.css
@@ -202,7 +202,7 @@ select
 }
 .textarea
 {
-	width:400px;
+	width:98%;
 	height:180px;
 	border:1px solid #CADCBA;
 }
